added cursor rule on button element

--- a/06-css_foundations/exercise-1.css
+++ b/06-css_foundations/exercise-1.css
@@ -13,4 +13,5 @@ button {
   background-color: orange;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: large;
+  cursor: pointer;
 }
