--- a/project1/styles.css
+++ b/project1/styles.css
@@ -12,25 +12,33 @@ body {
 }
 /* start of nav */
 .header-container {
-  /* border: 2px solid white; */
-
-  padding: 0 2em;
-  display: flex;
+  /* border: 2px solid white;   */
+  position: relative;
+  padding: 2rem 3rem;
+  /* display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-around;
+  align-items: center; */
 }
 
 .header-menu {
-  border-bottom: 2px solid #ffb000;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
-  padding: 0 3em 1em 3em;
+  justify-content: space-between;
+
+  /* border-bottom: 2px solid #ffb000;
+  flex-direction: column;
+  padding: 0 3em 1em 3em; */
 }
 
 .header-logo-container {
+  /* padding-bottom: 1em;
+  display: flex;
+  justify-content: center;
+  align-items: center; */
 }
 
 .header-logo {
@@ -39,10 +47,13 @@ body {
 
 .header-items {
   /* border: 2px solid red; */
-  display: flex;
+  /* 
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 3em;
+   */
+  display: flex;
+  gap: 2rem;
 
   list-style: none;
   font-weight: 600;
@@ -54,28 +65,110 @@ body {
   color: #ffb000;
 }
 
-.hitems a:hover {
+.header-items .hitems a:hover {
   color: #ff3131;
 }
-/* end of nav */
 
-/* start of hero */
-.hero-container {
-  /* border: 2px solid green; */
+.toggle_btn {
+  color: #ffb000;
+  font-size: 25px;
+  cursor: pointer;
+  display: none;
+}
 
-  color: #fff;
-  padding: 1em 0;
+.dropdown-items {
+  position: absolute;
+  right: 2rem;
+  height: 0;
 
+  list-style: none;
+  background: #1b1b1b;
+  width: 300px;
+  border-radius: 10px;
+  overflow: hidden;
+  transition: height 0.5s cubic-bezier(0.175, 0.885, 0.32, 1);
+  /* top: 60px; */
+}
+
+.dropdown-items .hitems {
+  padding: 1em;
+  font-weight: bold;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
+.dropdown-items.open {
+  height: 250px;
+}
+
+.dropdown-items .hitems a {
+  color: white;
+}
+
+.dropdown-items .hitems:hover {
+  background-color: #9b2929;
+}
+/* end of nav */
+
+/* start of RESPONSIVE NAV */
+@media only screen and (max-width: 961px) {
+  .header-items {
+    display: none;
+  }
+
+  .toggle_btn {
+    display: block;
+  }
+}
+
+@media only screen and (max-width: 401px) {
+  .dropdown-items {
+    left: 2rem;
+    width: unset;
+  }
+}
+/* end of RESPONSIVE NAV */
+
+/* start of HERO */
+.hero-container {
+  border: 2px solid green;
+
+  color: #fff;
+  /* gap: 1em; */
+  margin-bottom: 1em;
+
+  width: 100%;
+  /* max-width: 1200px; */
+
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.hero-image-container {
+  border: 2px solid green;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 2em;
+}
+
+.hero-image {
+  width: 100%;
+  max-width: 400px;
+}
+
 .hero-details {
-  /* border: 2px dotted white; */
+  border: 2px solid green;
+
   display: flex;
   flex-direction: column;
+  /* margin: 0 2em; */
+  justify-content: center;
+  /* gap: 1em; */
 }
 
 .hello {
@@ -85,10 +178,10 @@ body {
 .name {
   color: #ff3131;
   font-size: 40px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 300px;
+  /* display: flex; */
+  /* flex-direction: row; */
+  /* flex-wrap: wrap; */
+  /* width: 300px; */
 }
 
 .webdev {
@@ -113,17 +206,18 @@ body {
   border-radius: 5px;
 }
 
-.hero-image-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 2em;
+@media only screen and (max-width: 401px) {
+  .header-container {
+  }
 }
 
-.hero-image {
-  width: 30%;
+@media only screen and (min-width: 961px){
+  .hero-container {
+    padding: 2rem 3rem;
+  }
 }
-/* end of hero */
+
+/* end of HERO */
 
 /* start of about-me */
 .about-me-container {
