--- a/project1/styles.css
+++ b/project1/styles.css
@@ -163,14 +163,14 @@ body {
   /* border: 2px solid green; */
 
   color: #fff;
-  /* gap: 1em; */
+  gap: 2em;
   margin: 1em;
   width: 100%;
 
   display: flex;
   flex-direction: column;
   /* justify-content: space-between; */
-  /* align-items: center; */
+  align-items: center;
 }
 
 .hero-image-container {
@@ -336,8 +336,8 @@ body {
 
 /* start of skills */
 .skill-container {
-  margin: 1em;
-  padding: 1em 0;
+  /* border: 2px solid yellow; */
+  margin-bottom: -5em;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -438,38 +438,40 @@ body {
     bottom: 450px;
   }
 }
-
 /* end of skills */
 
 /* start of article */
 .article-container {
   /* border: 2px solid red; */
+  background-color: #ffb000;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   padding-bottom: 2em;
+  padding: 0 1em;
 }
 
 .article-title {
-  padding: 1em;
-
-  color: #fff;
-  font-size: 35px;
+  padding: 10px;
+  background-color: #ffb000;
+  color: #000000;
   text-align: center;
+  margin-bottom: 0.5em;
 }
 
 .article-items {
-  /* border: 10px dotted green; */
+  border: 2px solid #000000;
+  padding: 1em;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  gap: 2em;
+  gap: 1em;
 }
 
-.article-item {
+.article-details {
   /* border: 2px solid yellow; */
   background-color: #12141c;
 
@@ -477,20 +479,40 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 
-.article-item img {
-  width: 200px;
+.article-details img {
+  width: 100%;
+  max-width: 100px;
   /* border: 2px solid #ff3131; */
 }
 
 .article-info {
-  text-align: left;
+  text-align: center;
   color: #ffb000;
-  font-size: large;
-  font-weight: bolder;
-  text-transform: uppercase;
+  font-size: 15px;
+  font-weight: bold;
   padding-top: 0.5em;
+}
+
+@media only screen and (min-width: 961px) {
+  .article-container {
+    
+  }
+
+  .article-title{
+    padding: 1em 0 0.5em 0;
+  }
+
+  .article-items {
+    border: none;
+    padding: 0 15em;
+  }
+
+  .article-details img {
+    width: 100%;
+    max-width: 200px;
+  }
 }
 /* end of article */
