--- a/project1/styles.css
+++ b/project1/styles.css
@@ -370,13 +370,13 @@ body {
   width: 25%;
   gap: 1em;
   position: relative;
-  bottom: 310px;
+  bottom: 280px;
 }
 
 .css,
 .canva,
 .html {
-  width: 100px;
+  width: 80px;
   background-color: #12141c;
   border-radius: 0.5rem;
   padding: 0.5em;
@@ -449,7 +449,7 @@ body {
   justify-content: flex-start;
   align-items: center;
   padding-bottom: 2em;
-  padding: 0 1em;
+  /* padding: 0 1em; */
 }
 
 .article-title {
@@ -457,11 +457,11 @@ body {
   background-color: #ffb000;
   color: #000000;
   text-align: center;
-  margin-bottom: 0.5em;
+  margin: 0.5em 0 0 0;
 }
 
 .article-items {
-  border: 2px solid #000000;
+  /* border: 2px solid #000000; */
   padding: 1em;
   display: flex;
   flex-direction: row;
