--- a/project_1/styles.css
+++ b/project_1/styles.css
@@ -18,6 +18,7 @@ li {
   text-decoration: none;
 }
 
+
 /* variables */
 :root {
   --primary: #ffb000;
@@ -179,7 +180,7 @@ p {
   color: var(--tertiary);
 }
 
-.name {
+.hero-name {
   color: var(--quaternary);
 }
 
@@ -190,8 +191,8 @@ p {
 .hero-btn {
   color: var(--tertiary);
   border: 2px solid #ffffff;
-  background-color: var(--secondary);
-  box-shadow: #ffffff66 0px 0px 30px;
+  /* background-color: var(--secondary); */
+  /* box-shadow: #ffffff66 0px 0px 30px; */
   border-radius: 5px;
   font-weight: bold;
 
@@ -203,8 +204,8 @@ p {
 .hero-btn:hover {
   transition: 0.3s ease;
   color: var(--secondary);
-  border: 2px solid gray;
-  background-color: #808080;
+  border: 2px solid #ffffff;
+  background-color: var(--tertiary);
   box-shadow: #ffffff66 0px 0px 30px;
 }
 /* end of hero */
@@ -221,12 +222,15 @@ p {
 /* titles */
 .about-me-title,
 .skill-title,
-.article-title {
+.article-title,
+.cta-title {
   margin-bottom: 0.3em;
   padding: 0.2em 0.5em;
 
   animation: neonAnim 11s alternate-reverse infinite;
   color: var(--tertiary);
+
+  text-align: center;
 }
 @keyframes neonAnim {
   from {
@@ -261,8 +265,11 @@ p {
 /* start of skills */
 .skill-container {
   /* border: 2px solid white; */
-  margin-bottom: -3em;
-  padding: 1em;
+  background-image: url(img/yellow\ line.svg);
+  background-size: cover;
+  background-position: center;
+  /* margin-bottom: -3em; */
+  padding: 3em 1em 0 1em;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -270,7 +277,7 @@ p {
 }
 
 .monitor {
-  width: 100%;
+  width: 120%;
   max-width: 900px;
   position: static;
   top: 0;
@@ -282,10 +289,10 @@ p {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  width: 25%;
+  width: 17%;
   gap: 0.5em;
   position: relative;
-  bottom: 180px;
+  bottom: 200px;
   z-index: 1;
 }
 
@@ -293,7 +300,7 @@ p {
 .canva,
 .html,
 .psd {
-  width: 65px;
+  width: 100%;
   background-color: #12141c;
   border-radius: 0.5rem;
   padding: 0.5em;
@@ -312,15 +319,11 @@ p {
 
 /* start of project */
 .article-container {
-  background-image: url(img/yellow\ line.svg);
-  background-size: cover;
-  background-position: center;
-
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  padding: 1em;
+  padding: 1em 1em 2em 1em;
 }
 
 .article-items {
@@ -350,11 +353,138 @@ p {
   border-radius: 10px;
 }
 
-.article-info{
-    text-align: center;
-    color: var(--tertiary);
-    font-weight: bold;
-    text-transform: uppercase;
+.article-info {
+  text-align: center;
+  color: var(--tertiary);
+  font-weight: bold;
+  text-transform: uppercase;
+}
+/* end of project */
+
+/* start of Contact Me & Form */
+.ctaform-container {
+  /* border: 2px solid forestgreen; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;
+  /* padding: 1em; */
+}
+
+.cta-ctr {
+  /* border: 2px solid white; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1em;
+  width: 100%;
+  /* background-color: #2b2b2b; */
+}
+
+.cta-info {
+  gap: 0.5em;
+  text-align: right;
+  align-items: center;
+}
+
+.cta-details {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 0.5em;
+  text-align: center;
+  color: var(--tertiary);
+  font-weight: bold;
+  font-size: 0.8em;
+}
+
+.cta-details i {
+  color: var(--primary);
+}
+
+.form-ctr {
+  /* border: 2px solid white; */
+  background-color: #12141c;
+  padding: 1em;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1em;
+  width: auto;
+
+  border-radius: 10px;
+  box-shadow: 0px 1px 15px 5px rgba(255, 255, 255, 0.25) , 0px 8px 16px -8px rgba(255, 255, 255, 0.3) , 0px -6px 16px -6px rgba(255, 255, 255, 0.025);
+}
+
+.form-title {
+  font-size: 1.2em;
+  color: var(--tertiary);
+}
+
+.form-details {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1em;
+  font-size: 0.8em;
+}
+
+.form-details p {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  gap: 0.5em;
+}
+
+.form-details p:nth-child(5){
+  grid-column: 1/3;
+}
+
+.buttons{
+  grid-column: 1/3;
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  align-items: center;
+  gap: 1em;
+}
+
+input[type=text], 
+input[type=tel], textarea {
+  padding: 10px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+input[type=submit] {
+  background-color: var(--primary);
+  color: var(--secondary);
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #473100;
+  color: #ffffff;
+}
+
+input[type=reset] {
+  background-color: var(--quaternary);
+  color: var(--secondary);
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=reset]:hover {
+  background-color: #570000;
+  color: #ffffff;
 }
 
 /* small tablet styles */
