--- a/project_1/styles.css
+++ b/project_1/styles.css
@@ -410,9 +410,9 @@ p {
   padding: 1em;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items:start;
   gap: 1em;
-  width: auto;
+  /* width: auto; */
 
   border-radius: 10px;
   box-shadow: 0px 1px 15px 5px rgba(255, 255, 255, 0.25) , 0px 8px 16px -8px rgba(255, 255, 255, 0.3) , 0px -6px 16px -6px rgba(255, 255, 255, 0.025);
@@ -424,8 +424,8 @@ p {
 }
 
 .form-details {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  display: flex;
+  flex-direction: column;
   gap: 1em;
   font-size: 0.8em;
 }
@@ -434,7 +434,7 @@ p {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: start;
+  /* align-items: start; */
   gap: 0.5em;
 }
 
@@ -446,7 +446,7 @@ p {
   grid-column: 1/3;
   display: flex;
   flex-direction: row;
-  justify-content: end;
+  justify-content: center;
   align-items: center;
   gap: 1em;
 }
