--- a/project_1/styles.css
+++ b/project_1/styles.css
@@ -18,7 +18,6 @@ li {
   text-decoration: none;
 }
 
-
 /* variables */
 :root {
   --primary: #ffb000;
@@ -410,12 +409,14 @@ p {
   padding: 1em;
   display: flex;
   flex-direction: column;
-  align-items:start;
+  align-items: start;
   gap: 1em;
   /* width: auto; */
 
   border-radius: 10px;
-  box-shadow: 0px 1px 15px 5px rgba(255, 255, 255, 0.25) , 0px 8px 16px -8px rgba(255, 255, 255, 0.3) , 0px -6px 16px -6px rgba(255, 255, 255, 0.025);
+  box-shadow: 0px 1px 15px 5px rgba(255, 255, 255, 0.25),
+    0px 8px 16px -8px rgba(255, 255, 255, 0.3),
+    0px -6px 16px -6px rgba(255, 255, 255, 0.025);
 }
 
 .form-title {
@@ -438,11 +439,11 @@ p {
   gap: 0.5em;
 }
 
-.form-details p:nth-child(5){
+.form-details p:nth-child(5) {
   grid-column: 1/3;
 }
 
-.buttons{
+.buttons {
   grid-column: 1/3;
   display: flex;
   flex-direction: row;
@@ -451,15 +452,16 @@ p {
   gap: 1em;
 }
 
-input[type=text], 
-input[type=tel], textarea {
+input[type="text"],
+input[type="tel"],
+textarea {
   padding: 10px;
   display: inline-block;
   border: 1px solid #ccc;
   border-radius: 4px;
 }
 
-input[type=submit] {
+input[type="submit"] {
   background-color: var(--primary);
   color: var(--secondary);
   padding: 10px 15px;
@@ -468,12 +470,12 @@ input[type=submit] {
   cursor: pointer;
 }
 
-input[type=submit]:hover {
+input[type="submit"]:hover {
   background-color: #473100;
   color: #ffffff;
 }
 
-input[type=reset] {
+input[type="reset"] {
   background-color: var(--quaternary);
   color: var(--secondary);
   padding: 10px 15px;
@@ -482,7 +484,7 @@ input[type=reset] {
   cursor: pointer;
 }
 
-input[type=reset]:hover {
+input[type="reset"]:hover {
   background-color: #570000;
   color: #ffffff;
 }
