--- a/project_1/styles.css
+++ b/project_1/styles.css
@@ -411,7 +411,7 @@ p {
   flex-direction: column;
   align-items: start;
   gap: 1em;
-  /* width: auto; */
+  margin-bottom: 2em;
 
   border-radius: 10px;
   box-shadow: 0px 1px 15px 5px rgba(255, 255, 255, 0.25),
@@ -453,6 +453,7 @@ p {
 }
 
 input[type="text"],
+input[type="email"],
 input[type="tel"],
 textarea {
   padding: 10px;
@@ -488,6 +489,30 @@ input[type="reset"]:hover {
   background-color: #570000;
   color: #ffffff;
 }
+
+/* start of footer */
+footer{
+  border-top: 2px solid #ffb000;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  padding: 1.5em;
+}
+
+.f-icons{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5em;
+
+  font-size: 1.5em;
+}
+.f-icons a{
+  color: #ffffff;
+}
+/* end of footer */
 
 /* small tablet styles */
 @media only screen and (min-width: 620px) {
